GNOME Bugzilla – Bug 120552
Closing the configurable text export wizzard freezes the main application
Last modified: 2004-12-22 21:47:04 UTC
If you use the window widget to close the wizard instead of the cancel button, control is not returned back to the aplication and it freezes waiting for the signal of the export wizard.
*** Bug 120553 has been marked as a duplicate of this bug. ***
Which version of gnumeric are you running? I remember Morten fixing this bug after I pointed it out to him.
Andreas: I doubt I did anything to _export_. Must have been import.
I have tested it again and it seems to work well... I'm sorry
I guess I can't read. The bug is still in the export dialog. Morten fixed the import dialog. Essentially by closing the export dialog via the window manager gnumeric still doesn't realize the window is gone. This is serious since data can be lost.
fixed in cvs. Will be in 1.1.90