http://bugzilla.gnome.org/show_bug.cgi?id=120552 new

2003-08-25  Andreas J. Guelzow  <aguelzow@taliesin.ca>

	http://bugzilla.gnome.org/show_bug.cgi?id=120552
	* dialog-stf-export.c (stf_dialog_window_delete): new
	(stf_export_dialog_attach_page_signals): connect
	  stf_dialog_window_delete